--- a/less/dark-mode.less
+++ b/less/dark-mode.less
@@ -169,6 +169,13 @@
     .dark-text {
       position: static;
       width: auto;
+      font-size: 0; /* Hide original text including space */
+    }
+    
+    .dark-text:after {
+      content: "DARK";
+      font-size: 14px; /* Restore font size */
+      display: inline-block;
     }
   }
 }
